src/test/deca/context/invalid/printlnx_boolean.deca
// Description:
//    printlnx boolean ;
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

{
    printlnx(true);
}
